--- a/index.html
+++ b/index.html
@@ -1,90 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Single-page developer portfolio</title>
-</head>
-<body>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
 
-  adamkeyes
+    <title>Frontend Mentor | Single-page developer portfolio</title>
+  </head>
+  <body>
+    <p>albertoSerafini</p>
 
-  <a href=""></a>
+    <a href=""></a>
+    <a href=""></a>
 
-  Nice to meet you! I'm Adam Keyes.
+    <h1>Nice to meet you! I'm Alberto Serafini.</h1>
 
-  Based in the UK, I'm a front-end developer passionate about 
-  building accessible web apps that users love.
+    <p>
+      Based in Richmond VA, I'm a front-end developer passionate about building
+      accessible web apps that users love.
+    </p>
 
-  Contact me
+    <h2>Contact me</h2>
+    <div>
+      <h1>HTML</h1>
+      <p>4 Years Experience</p>
 
-  HTML
-  4 Years Experience
+      <h1>CSS</h1>
+      <p>4 Years Experience</p>
 
-  CSS
-  4 Years Experience
+      <h1>JavaScript</h1>
+      <p>4 Years Experience</p>
 
-  JavaScript
-  4 Years Experience
+      <h1>Accessibility</h1>
+      <p>4 Years Experience</p>
 
-  Accessibility
-  4 Years Experience
+      <h1>React</h1>
+      <p>3 Years Experience</p>
+    </div>
+    <div>
+      <h1>Projects</h1>
+      <p>Contact me</p>
+    </div>
 
-  React
-  3 Years Experience
-
-  Sass
-  3 Years Experience
-
-  Projects
-
-  Contact me
-
-  Design portfolio
-  HTML CSS
-  View project
-  View code
-
-  E-learning landing page
-  HTML CSS
-  View project
-  View code
-
-  Todo web app
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Entertainment web app
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Memory Game
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Art gallery showcase
-  HTML CSS JavaScript
-  View project
-  View code
-
-  Contact
-
-  I would love to hear about your project and how I could help. Please 
-  fill in the form, and I’ll get back to you as soon as possible.
-
-  Name
-  Email
-  Message
-
-  Send message
-
-  adamkeyes
-
-</body>
+    <div></div>
+    <h2>Design portfolio</h2>
+    <div>
+      <p>HTML</p>
+      <p>CSS</p>
+    </div>
+    <div>
+      <h2>View project</h2>
+      <h2>View code</h2>
+    </div>
+    <div></div>
+    <h2>Design portfolio</h2>
+    <div>
+      <p>HTML</p>
+      <p>CSS</p>
+    </div>
+    <div>
+      <h2>View project</h2>
+      <h2>View code</h2>
+    </div>
+    <div></div>
+    <h2>Design portfolio</h2>
+    <div>
+      <p>HTML</p>
+      <p>CSS</p>
+    </div>
+    <div>
+      <h2>View project</h2>
+      <h2>View code</h2>
+    </div>
+    <h1>Contact</h1>
+    <p>
+      I would love to hear about your project and how I could help. Please fill
+      in the form, and I’ll get back to you as soon as possible.
+    </p>
+    <form action="">Name Email Message Send message</form>
+  </body>
 </html>
