--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         fill in the form, and I’ll get back to you as soon as possible.
       </p>
     </div>
-      <form action="YOUR_SERVER_ENDPOINT_HERE" method="POST">
+      <form name="contact" method="POST" data-netlify="true">
         <input
           type="text"
           id="name"
