--- a/index.html
+++ b/index.html
@@ -142,7 +142,9 @@
         fill in the form, and I’ll get back to you as soon as possible.
       </p>
     </div>
-      <form name="contact" method="POST" data-netlify="true">
+      <form name="contact" method="POST" data-netlify="true" action="/thanks.html>
+        <input type="hidden" name="form-name" value="contact" />
+        
         <input
           type="text"
           id="name"
