--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       </p>
     </div>
       <form name="contact" method="POST" data-netlify="true" action="/">
-        <input type="hidden" name="contact" value="contact" />
+        <input type="hidden" name="form-name" value="contact" />
 
         <input
           type="text"
