--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         fill in the form, and I’ll get back to you as soon as possible.
       </p>
     </div>
-      <form name="contact" method="POST" data-netlify="true" action="/">
+      <form name="contact" method="POST" data-netlify="true" action="/thanks.html">
         <input type="hidden" name="form-name" value="contact" />
 
         <input
