--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               />
             </a>
 
-            <a href="https://linkedin.com" target="_blank">
+            <a href="https://www.linkedin.com/in/alberto-serafini" target="_blank">
               <img
                 src="./assets/images/Linkedin.svg"
                 alt="linkedin"
@@ -142,7 +142,7 @@
         fill in the form, and I’ll get back to you as soon as possible.
       </p>
     </div>
-      <form name="contact" method="POST" data-netlify="true" action="/thanks.html">
+      <form name="contact" id="contact-form" method="POST" data-netlify="true" action="/thanks.html">
         <input type="hidden" name="form-name" value="contact" />
 
         <input
@@ -172,5 +172,6 @@
       </form>
     </section>
   </div>
+  <script src="index.js"></script>
   </body>
 </html>
